--- a/learning-projects/HTML_CSS_Java/javascript course/rock-paper-scissors.html
+++ b/learning-projects/HTML_CSS_Java/javascript course/rock-paper-scissors.html
@@ -97,8 +97,9 @@
         
         localStorage.setItem('score', JSON.stringify(score))
 
-        alert(`Player choice: ${playerMove}\nComputer choice: ${computerChoice}\n${result}!
-              \nWins: ${score.wins} Draws: ${score.draws} Losses: ${score.losses}`)
+        alert(`Player choice: ${playerMove}\nComputer choice: ${computerChoice}
+              \n${result}!\nWins: ${score.wins} Draws: ${score.draws} Losses: 
+              ${score.losses}`)
         
       }
 
